Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,22 @@
-<% provide(:title, 'Home') %>
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+  <div class = "lorem">Lorem ipsum dolor sit amet, ea eum tota saepe periculis, gubergren repudiandae ex nam. Tempor semper mel ea, eum suas volumus appetere te. Ad pri singulis laboramus scripserit. Case sanctus et pro, te mel magna tantas offendit. Te malis liber dissentias nec. Odio officiis iudicabit pri ad, nobis convenire pertinacia ne vim.
+
+In qui magna cotidieque, eu choro commodo fastidii vel, ex quis utroque suscipiantur eum. Te ornatus periculis vulputate eam, nostrud ocurreret liberavisse ea usu, minim tollit incorrupte cu vim. Munere oporteat patrioque ne vel, usu error oporteat salutatus ei, no veniam rationibus mel. Stet mentitum in sed.
+
+Eius recteque mel ad. Ancillae necessitatibus sit cu. Et sed falli aliquip, ius quis ubique conceptam cu. No harum atomorum referrentur mei. Et nusquam iracundia cum, ad quo atqui ignota postulant, esse nominavi in sit.
+
+Te his suas veniam perpetua. Eu inani graecis vim, ad mea quod semper, et legere equidem sit. In docendi officiis dignissim pro. Vis eu eius mazim placerat, ex putant accommodare eam.
+
+Nec nonumes maiorum dignissim te. An his possim nostrum, quo saperet senserit ei, ea inani pericula est. Ne sit purto rebum dicta, cu stet adipisci vis. Ei sed sumo ipsum alterum, minim periculis definiebas vix an, brute postea et sed.</div>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
